tarefas 1 2 3, erro ao executar