@@ -1,76 +1,53 @@
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Comparator;
-import java.util.LinkedList;
 import java.util.List;
-import java.util.Scanner;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
-public class Consultas {
-    private List<RegistroDoTempo> registros;
-    private String nArq;
 
-    public Consultas(){
-        registros = new LinkedList<>();
-        this.nArq = "poa_temps.txt";
+public class Consultas implements IStrategy {
+    private Repository repository;
+    private Predicate<RegistroDoTempo> consultaPadrao;
+
+    public Consultas(Repository repository){
+        this.repository=repository;
     }
 
-    public void carregaDados(){
-        String currDir = Paths.get("").toAbsolutePath().toString();
-        // Monta o nome do arquivo
-        String nomeCompleto = currDir+"/"+nArq;
-        System.out.println(nomeCompleto);
-        // Cria acesso ao "diretorio" da mídia (disco)
-        Path path = Paths.get(nomeCompleto);
-
-        String linha = "";
-         // Usa a classe scanner para fazer a leitura do arquivo
-         try (Scanner sc = new Scanner(Files.newBufferedReader(path, StandardCharsets.UTF_8))){
-            // Pula o cabecalho
-            sc.nextLine();
-            // Le os dados
-            while(sc.hasNext()){
-                linha = sc.nextLine();
-                String dados[] = linha.split(" ");
-                // Trata a data
-                String data[] = dados[0].split("/");
-                int dia = Integer.parseInt(data[0]);
-                int mes = Integer.parseInt(data[1]);
-                int ano = Integer.parseInt(data[2]);
-                // Trata demais dados
-                double precipitacao = Double.parseDouble(dados[1]);
-                double tempMaxima = Double.parseDouble(dados[2]);
-                double tempMinima = Double.parseDouble(dados[3]);
-                double horasInsolacao = Double.parseDouble(dados[4]);
-                double temperaturaMedia = Double.parseDouble(dados[5]);
-                double umidadeRelativaDoAr = Double.parseDouble(dados[6]);
-                double velocidadeDoVento = Double.parseDouble(dados[7]);
-                // Cria um registro e insere na lista
-                RegistroDoTempo reg = new RegistroDoTempo(dia, mes, ano, precipitacao, tempMaxima, tempMinima, horasInsolacao, temperaturaMedia, umidadeRelativaDoAr, velocidadeDoVento);
-                registros.add(reg);
-            }
-         }catch (IOException x){
-             System.err.format("Erro de E/S: %s%n", x);
-         }
-    }    
-
     public List<String> datasEmQueChouveuMaisDe(double milimetros){
-        return registros
-            .stream()
-            .filter(r->r.getPrecipitacao() > milimetros)
-            .map(r->r.getDia()+"/"+r.getMes()+"/"+r.getAno())
-            .toList();
+        return repository.getTodos()
+               .stream()
+               .filter(r->r.getPrecipitacao() > milimetros)
+               .map(r->r.getDia()+"/"+r.getMes()+"/"+r.getAno())
+               .collect(Collectors.toList());
     }
 
     public String diaQueMaisChoveuNoAno(int ano){
-        RegistroDoTempo registro = registros
-        .stream()
-        .filter(reg->reg.getAno() == ano)
-        .max(Comparator.comparing(RegistroDoTempo::getPrecipitacao))
-        .orElseThrow(IllegalArgumentException::new);
-        String resp = registro.getDia()+"/"+registro.getMes()+"/"+registro.getAno()+", "+registro.getPrecipitacao();
-        return resp;
+        List<RegistroDoTempo> registrosAno = repository.getTodos()
+            .stream()
+            .filter(reg->reg.getAno()==ano)
+            .collect(Collectors.toList());
+
+        if (registrosAno.isEmpty()) {
+            throw new IllegalArgumentException("Nenhum registro encontrado para o ano especificado."); 
+        }
+
+        RegistroDoTempo registro = registrosAno
+            .stream()
+            .max(Comparator.comparing(RegistroDoTempo::getPrecipitacao))
+            .orElseThrow(IllegalArgumentException::new);
+
+        return registro.getDia() + "/" + registro.getMes() + "/" + registro.getAno() + ", " + registro.getPrecipitacao();
     }
+
+    public List<Data> diasEmQue() {
+        return repository.getTodos()
+            .stream()
+            .filter(consultaPadrao)
+            .map(reg -> new Data(reg.getDia(), reg.getMes(), reg.getAno()))
+            .collect(Collectors.toList());
+    }
+
+    public void alteraConsultaPadrao(Predicate<RegistroDoTempo> consulta)   {
+        consultaPadrao=consulta;
+    }
+
 }
